# fay_RIVAL

./: main.cpp
FINAL_PROJECT/: robot_main.py
Tugas1/: CMakeLists.txt  ball.hpp  game.hpp  main.cpp
Tugas1/src/: ball.hpp  game.hpp  main.cpp
Tugas2/devel/: local_setup.sh
Tugas2/src/turtlesim_fay/src/: fay.cpp
Tugas4/: FAYZA_KINEMATIKA_1.cpp  FAYZA_KINEMATIKA_2.cpp
devel/: setup.sh
devel/lib/pkgconfig/: turtlesim_fay.pc
devel/lib/turtlesim_fay/: turtle_controller
devel/share/turtlesim_fay/cmake/: turtlesim_fayConfig.cmake
src/turtlesim_fay/: CMakeLists.txt  package.xml
